# modbot

./: .gitignore  LICENSE  ModbotSymbolLib 1-27-24.kicad_sym  README.md
.github/: CODEOWNERS
ModbotFootprintLib 1-27-24.pretty/: AMPHENOL_L717TSAG15POL2RM5C309.kicad_mod  C911_KEM.kicad_mod  CAPC0603X33N.kicad_mod  CAPC2012X70N.kicad_mod  CAPC3225X270N.kicad_mod  CAPC3225X280N.kicad_mod  CAPC340180_135N_KEM-L.kicad_mod  CAPC340180_135N_KEM-M.kicad_mod  CAPC340180_135N_KEM.kicad_mod  CAPRB500W50L550T350H600.kicad_mod  CAP_0402_WAL-L.kicad_mod  CAP_0402_WAL-M.kicad_mod  CAP_0402_WAL.kicad_mod  CAP_6.3X11_RUB.kicad_mod  CAP_C315C_MOLDED_KEM.kicad_mod  CAP_C320C_MOLDED RADIAL_KEM.kicad_mod  CAP_C322_KEM.kicad_mod  CAP_CL05_SAM-L.kicad_mod  CAP_CL05_SAM-M.kicad_mod  CAP_CL05_SAM.kicad_mod  CAP_CL21_SAM-L.kicad_mod  CAP_CL21_SAM-M.kicad_mod  CAP_CL21_SAM.kicad_mod  CAP_EEE-1CA100SR_PAN-L.kicad_mod  CAP_EEE-1CA100SR_PAN-M.kicad_mod  CAP_EEE-1CA100SR_PAN.kicad_mod  CAP_FG18_TDK.kicad_mod  CAP_GRM155D80J225KE95D_MUR-L.kicad_mod  CAP_GRM155D80J225KE95D_MUR-M.kicad_mod  CAP_GRM155D80J225KE95D_MUR.kicad_mod  CAP_GRM_32E_MUR-L.kicad_mod  CAP_GRM_32E_MUR-M.kicad_mod  CAP_GRM_32E_MUR.kicad_mod  CAP_PAN_4X5_PAN.kicad_mod  CAP_RDEC71E226K3K1H03B.kicad_mod  CAP_RDER71E104K0S1H03A.kicad_mod  CAP_WCAP-ASLI_08p0X10p5_WRE-L.kicad_mod  CAP_WCAP-ASLI_08p0X10p5_WRE-M.kicad_mod  CAP_WCAP-ASLI_08p0X10p5_WRE.kicad_mod  CAP_WCAP-ATG5_6.3x11_WRE.kicad_mod  (+66 more)
dev/basic_swerve/: CMakeLists.txt  Controller.py  basic_swerve_pi.py  basic_swerve_pico.c  joystick_sim.py  swerve_test.py
dev/encoder/: CMakeLists.txt  pio_rotary_encoder.cpp  quadrature_encoder.cpp  quadrature_encoder.pio
dev/encoder/pio_rotary_encoder/: CMakeLists.txt  pio_rotary_encoder.cpp
dev/heartbeat-prototype/: README.md
dev/heartbeat-prototype/raspi/: raspi.sh
dev/heartbeat-prototype/user/: user.py
dev/i2c-comms/: CMakeLists.txt  pi_i2c.py  pi_spi.c  pico_i2c.c  pico_spi.c
dev/i2c_drive/: CMakeLists.txt  i2c_drive_pi.py  i2c_drive_pico.c  procon.py
dev/motor_test_python/: Controller.py  motor_test.py
dev/pico_motor_test/: CMakeLists.txt  class_motor_test.cpp  cooler_motor_test.c  cooler_motor_test.cpp
dev/socket_test/: echo-client.py  echo-server.py
dev/swerve/: CMakeLists.txt  Controller.py  README.md  XboxController.py  cooler_motor_test.c  get_joystick_input.py  i2c_drive_pi.py  i2c_drive_pico.c  joystick_sim.py  keyboard_sim.py  motor_test.py  pyproject.toml
dev/swerve/src/: main.py
dev/swerve_sim_joystick/: Controller.py  joystick_sim.py  procon.py
dev/swerve_sim_keyboard/: README.md  pyproject.toml
dev/swerve_sim_keyboard/src/: main.py
dev/swerve_sim_keyboard/test/: keyboard_test.py
dev/ultrasonic_test/: CMakeLists.txt  main.c
