[tool.poetry]
name = "swerve_sim_keyboard"
version = "0.1.0"
description = "Modbot Swerve Simulation"
authors = ["Autoslug UCSC <autoslug@ucsc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
keyboard = "^0.13.5"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
